tdf#131722 Fix lost first character of Date picker content control

Change-Id: I891164c814f9905820bbb604ea034a9fae40d55d